# Artemis

./: .gitignore  main.py  pyproject.toml  requirements.txt
data/hyps/: hyp.scratch-high.yaml  hyp.scratch-low.yaml  hyp.scratch-med.yaml
data/scripts/: get_coco.sh  get_imagenet.sh
models/: common.py  experimental.py  yolo.py
utils/: __init__.py  activations.py  augmentations.py  autoanchor.py  autobatch.py  callbacks.py  dataloaders.py  downloads.py  general.py  loss.py  metrics.py  plots.py  torch_utils.py
utils/loggers/: __init__.py
utils/loggers/clearml/: README.md
utils/segment/: augmentations.py  dataloaders.py  metrics.py  plots.py
