[tool.poetry]
name = "Artemis"
version = "0.1.0"
description = ""
authors = ["Milkflavor <Milkflavor.git@gmail.com>"]
readme = "README.md"
packages = [{include = "poetry_demo"}]

[tool.poetry.dependencies]
python = "^3.12"
matplotlib = ">=3.7.1"
numpy = ">=1.24.2"
opencv-python = ">=4.7.0.72"
Pillow = ">=9.4.0"
PyYAML = ">=6.0"
requests = ">=2.28.2"
scipy = ">=1.10.1"
torch = ">=2.0.0"
torchvision = ">=0.15.1"
tqdm = ">=4.65.0"
protobuf = "<=4.22.1"

[tool.poetry.extras]
interactive = ["ipython"]
system = ["psutil"]
flops = ["thop"]

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.1.0"]
build-backend = "poetry.core.masonry.api"
